--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="/css/base.css" type="text/css" media="screen" title="no title" charset="utf-8">
 </head>
 <body>
-	<h1>Shoppy Shopperson</h1>
+	<h1>Fantasyzer</h1>
 {{{ body }}}
 </body>
 </html>
